# FlowerFLTemplate

./: .gitignore  README.md  pyproject.toml  run.sh
FLTemplate/: main.py  speech.ipynb
FLTemplate/Aggregations/: aggregations.py
FLTemplate/Client/: client.py
FLTemplate/ClientManager/: client_manager.py
FLTemplate/Datasets/: abalone.py  celeba.py  dataset_utils.py  dutch.py  income.py  mnist.py  tabular_datasets.py
FLTemplate/Models/: architectures.py  model.py  models.py  regression_model.py  simple_cnn.py  simple_model.py  utils.py
FLTemplate/Server/: server.py
FLTemplate/Strategy/: fed_avg.py
FLTemplate/Training/: training.py
FLTemplate/Utils/: dataset.py  preferences.py  utils.py
FLTemplate/examples/celeba/: celeba_cross_device_NON_iid.yaml  celeba_cross_device_iid.yaml  celeba_cross_silo_NON_iid.yaml  celeba_cross_silo_iid.yaml  run_sweep.sh
FLTemplate/examples/dutch/: run.sh  temp_output.txt
FLTemplate/examples/income/: income_cross_silo_NON_iid.yaml
FLTemplate/examples/mnist/: temp_output.txt
FlowerFLTemplate/: main.py
FlowerFLTemplate/Datasets/: income.py  mnist.py
FlowerFLTemplate/Server/: server.py
fltemplate/: main.py  test.sh
fltemplate/Client/: client.py
fltemplate/ClientManager/: client_manager.py
fltemplate/Dataset/: federated_dataset.py  load_data.py
fltemplate/Learning/: learning.py
fltemplate/Server/: server.py
fltemplate/Strategy/: fed_avg.py
fltemplate/Utils/: aggregation.py  preferences.py  utils.py
old_fltemplate/: main.py  tutorial.ipynb
old_fltemplate/ClientManager/: client_manager.py
old_fltemplate/Dataset/: federated_dataset.py  load_data.py
