[project]
name = "fltemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "dill>=0.3.8",
    "flwr-datasets>=0.5.0",
    "flwr[simulation]>=1.20.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opacus>=1.4.1",
    "pandas>=2.2.3",
    "ray>=2.31.0",
    "ruff>=0.11.11",
    "scikit-learn>=1.7.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "ty>=0.0.1a19",
    "wandb>=0.19.11",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "N", "I", "ANN", "B", "C4", "UP"]
ignore = ["E501", "ANN101", "ANN102", "ANN401", "B008", "C901", "W191", "N999"]

[tool.ty.rules]
unresolved-import = "ignore"